# material_aging

./: CMakeLists.txt  README.md
cuda_pathtracer/: CMakeLists.txt
cuda_pathtracer/include/: AgingEffects.cuh  AgingUI.cuh  Color.cuh  ImplicitObject.cuh  Material.cuh  Window.cuh
cuda_pathtracer/src/: AgingEffects.cu  main.cu
